Refactored commands building, about UI

--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -759,63 +759,6 @@
                                     <constraint firstItem="6CE-dn-y2P" firstAttribute="centerX" secondItem="82J-cI-jpS" secondAttribute="centerX" id="apR-9t-fOR"/>
                                 </constraints>
                             </customView>
-                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="lhQ-nT-Gbv">
-                                <rect key="frame" x="0.0" y="0.0" width="482" height="585"/>
-                                <subviews>
-                                    <stackView distribution="fill" orientation="vertical" alignment="trailing" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-me-VMT">
-                                        <rect key="frame" x="94" y="200" width="294" height="185"/>
-                                        <subviews>
-                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="60f-GI-8mC">
-                                                <rect key="frame" x="164" y="53" width="130" height="132"/>
-                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="EmptyIcon" id="f2i-wX-89C"/>
-                                            </imageView>
-                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="RRZ-Aq-4k6">
-                                                <rect key="frame" x="204" y="37" width="92" height="16"/>
-                                                <textFieldCell key="cell" selectable="YES" title="Multiline Label" id="lMT-qo-6Zd">
-                                                    <font key="font" metaFont="system"/>
-                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                </textFieldCell>
-                                            </textField>
-                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BUq-g1-K2L">
-                                                <rect key="frame" x="219" y="9" width="81" height="32"/>
-                                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ysV-sp-RcN">
-                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                    <font key="font" metaFont="system"/>
-                                                </buttonCell>
-                                            </button>
-                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VWF-0c-kFG">
-                                                <rect key="frame" x="259" y="0.0" width="37" height="16"/>
-                                                <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="VOb-Vx-rKW">
-                                                    <font key="font" metaFont="system"/>
-                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                </textFieldCell>
-                                            </textField>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="294" id="b5a-GF-9hb"/>
-                                            <constraint firstAttribute="height" constant="185" id="wji-HY-9Ws"/>
-                                        </constraints>
-                                        <visibilityPriorities>
-                                            <integer value="1000"/>
-                                            <integer value="1000"/>
-                                            <integer value="1000"/>
-                                            <integer value="1000"/>
-                                        </visibilityPriorities>
-                                        <customSpacing>
-                                            <real value="3.4028234663852886e+38"/>
-                                            <real value="3.4028234663852886e+38"/>
-                                            <real value="3.4028234663852886e+38"/>
-                                            <real value="3.4028234663852886e+38"/>
-                                        </customSpacing>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="zH8-me-VMT" firstAttribute="centerX" secondItem="lhQ-nT-Gbv" secondAttribute="centerX" id="qIr-4a-zH8"/>
-                                    <constraint firstItem="zH8-me-VMT" firstAttribute="centerY" secondItem="lhQ-nT-Gbv" secondAttribute="centerY" id="zK3-2K-yBE"/>
-                                </constraints>
-                            </customView>
                             <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="90" horizontalPageScroll="10" verticalLineScroll="90" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jro-eN-807">
                                 <rect key="frame" x="0.0" y="0.0" width="482" height="585"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LYZ-ht-aUh">
@@ -1197,6 +1140,91 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="lhQ-nT-Gbv" customClass="BREmptyView">
+                                <rect key="frame" x="0.0" y="0.0" width="482" height="585"/>
+                                <subviews>
+                                    <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="15" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-me-VMT">
+                                        <rect key="frame" x="94" y="198" width="294" height="189"/>
+                                        <subviews>
+                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="60f-GI-8mC">
+                                                <rect key="frame" x="122" y="139" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="pjg-o2-nWB"/>
+                                                    <constraint firstAttribute="height" constant="50" id="sAE-Ba-e7W"/>
+                                                </constraints>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="EmptyIcon" id="f2i-wX-89C"/>
+                                            </imageView>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VWF-0c-kFG">
+                                                <rect key="frame" x="-2" y="99" width="298" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="tgs-C0-0Wa"/>
+                                                </constraints>
+                                                <textFieldCell key="cell" lineBreakMode="clipping" enabled="NO" alignment="center" title="NO ACCOUNTS YET" id="VOb-Vx-rKW">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="RRZ-Aq-4k6">
+                                                <rect key="frame" x="-2" y="49" width="298" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="Tcr-bS-rDM"/>
+                                                </constraints>
+                                                <textFieldCell key="cell" selectable="YES" enabled="NO" alignment="center" title="Let’s add the first one by adding your Bitrise personal access token. It’s secure, trust us." id="lMT-qo-6Zd">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BUq-g1-K2L">
+                                                <rect key="frame" x="82" y="0.0" width="130" height="34"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="130" id="0uf-co-AGK"/>
+                                                    <constraint firstAttribute="height" constant="34" id="j2Z-VR-DC0"/>
+                                                </constraints>
+                                                <buttonCell key="cell" type="roundRect" bezelStyle="roundedRect" image="AddButtonImage" imagePosition="left" alternateImage="AddButtonImage" inset="2" id="ysV-sp-RcN">
+                                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                                    <font key="font" metaFont="controlContent"/>
+                                                </buttonCell>
+                                                <color key="contentTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <connections>
+                                                    <action selector="addAccount:" target="lhQ-nT-Gbv" id="WMO-t9-EYr"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="VWF-0c-kFG" secondAttribute="trailing" id="47q-Ed-pTu"/>
+                                            <constraint firstItem="VWF-0c-kFG" firstAttribute="leading" secondItem="zH8-me-VMT" secondAttribute="leading" id="MyE-Ic-k1D"/>
+                                            <constraint firstAttribute="width" constant="294" id="b5a-GF-9hb"/>
+                                            <constraint firstItem="RRZ-Aq-4k6" firstAttribute="leading" secondItem="zH8-me-VMT" secondAttribute="leading" id="ccA-y0-hh4"/>
+                                            <constraint firstAttribute="height" constant="189" id="wji-HY-9Ws"/>
+                                            <constraint firstAttribute="trailing" secondItem="RRZ-Aq-4k6" secondAttribute="trailing" id="zrt-i5-iIx"/>
+                                        </constraints>
+                                        <visibilityPriorities>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                            <integer value="1000"/>
+                                        </visibilityPriorities>
+                                        <customSpacing>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                            <real value="3.4028234663852886e+38"/>
+                                        </customSpacing>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="zH8-me-VMT" firstAttribute="centerX" secondItem="lhQ-nT-Gbv" secondAttribute="centerX" id="qIr-4a-zH8"/>
+                                    <constraint firstItem="zH8-me-VMT" firstAttribute="centerY" secondItem="lhQ-nT-Gbv" secondAttribute="centerY" id="zK3-2K-yBE"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="addAccountButton" destination="BUq-g1-K2L" id="UJh-iI-Ckz"/>
+                                    <outlet property="emptyIcon" destination="60f-GI-8mC" id="HBz-vq-1ba"/>
+                                    <outlet property="subtitleField" destination="RRZ-Aq-4k6" id="yBG-hP-hUG"/>
+                                    <outlet property="titleField" destination="VWF-0c-kFG" id="M1i-h2-aSW"/>
+                                </connections>
+                            </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="ASy-l0-zdF">
                                 <rect key="frame" x="0.0" y="560" width="482" height="25"/>
                                 <subviews>
@@ -2010,7 +2038,7 @@ Gw
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="bb9-zw-3Vr" secondAttribute="height" multiplier="1:1" id="RDN-yV-FRp"/>
                                                 </constraints>
-                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Icon-1" id="WhP-0z-q5u"/>
+                                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Icon" id="WhP-0z-q5u"/>
                                             </imageView>
                                             <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j63-6n-mGW">
                                                 <rect key="frame" x="31" y="0.0" width="89" height="55"/>
@@ -2136,6 +2164,7 @@ BitBot and we are not associated or affiliated with Bitrise in any way. </mutabl
                     </view>
                     <connections>
                         <outlet property="aboutTextView" destination="ryo-DS-wy4" id="vbu-H4-EqQ"/>
+                        <outlet property="nameField" destination="C2e-Wd-kcM" id="gYd-WS-nEU"/>
                         <outlet property="versionField" destination="azh-8G-J61" id="aYs-Tm-hrg"/>
                     </connections>
                 </viewController>
@@ -2156,8 +2185,9 @@ BitBot and we are not associated or affiliated with Bitrise in any way. </mutabl
         </scene>
     </scenes>
     <resources>
-        <image name="EmptyIcon" width="130" height="130"/>
-        <image name="Icon-1" width="1024" height="1024"/>
+        <image name="AddButtonImage" width="130" height="34"/>
+        <image name="EmptyIcon" width="50" height="50"/>
+        <image name="Icon" width="1024" height="1024"/>
         <image name="Logo" width="84" height="29"/>
         <image name="NSActionTemplate" width="14" height="14"/>
         <image name="NSAddTemplate" width="11" height="11"/>
